--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<p>
-    Hello World
-    |
-    |
-    |
-    |
-    V   1   2   3
-</p>
+<h1>Title test</h1>
+<p>Hello World</p>
+<p>2nd line test</p>
