--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
-<h1>Title test</h1>
-<p>Hello World</p>
-<p>2nd line test</p>
+<head>
+    <h1>Title test</h1>
+</head>
+<body>
+    <p>Hello World</p>
+    <p>2nd line test</p>
+</body>
