--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-<head>
-    <h1>Title test</h1>
-</head>
-<body>
-    <p>Hello World</p>
-    <p>2nd line test</p>
-</body>
+<html>
+    <head>
+        <title>ilikepie</title>
+    </head>
+    <body>
+        <h1>Title test</h1>
+        <p>Hello World</p>
+        <p>|</p>
+        <p>|</p>
+        <p>|</p>
+        <p>|</p>
+        <p>V    1   2   3</p>
+
+    </body>
+</html>
