--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     </head>
     <body>
         <h1>Title test</h1>
-        <p>Hello World</p>
-        <p>|</p>
-        <p>|</p>
-        <p>|</p>
-        <p>|</p>
-        <p>V    1   2   3</p>
-
+        <p>Hello World</br>hi</p>
     </body>
 </html>
