--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
+        <meta charset="utf-8">
         <title>ilikepie</title>
     </head>
 
@@ -9,15 +10,9 @@
         <h1>Title test</h1>
 
         <p>
-            Hello World</br>
-             |<br>
-             |<br>
-             |<br>
-            V<br>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Test</a>
+            ALL HAIL RICK</br>
+            <img src="https://i.imgflip.com/2/4lst2s.jpg"width="104" height="142"><br>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">This is a link</a>
         </p>
-        
-        <blockquote>what dis do???</blockquote>
     </body>
-
 </html>
