--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Title test</h1>
+        <h1 style="font-size: 80;">Title test</h1>
 
         <p>
             ALL HAIL RICK</br>
