--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
     <head>
         <meta charset="utf-8">
-        <title>ilikepie</title>
+        <title>RIIIIIIIIIIIIIIIIIICCCCCCCCKKKKKK</title>
     </head>
 
     <body>
-        <h1 style="font-size: 80;">Title test</h1>
+        <h1 style="font-size: 80;">RICK IS LOVE, RICK IS LIFE</h1>
 
         <p>
             ALL HAIL RICK</br>
             <img src="https://i.imgflip.com/2/4lst2s.jpg"width="104" height="142"><br>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">This is a link</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">This is a rick related link</a>
         </p>
     </body>
 </html>
