--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     </head>
 
     <body>
+        <ol>
+            <li>rick</li>
+            <li>roll</li>
+            <li>rick</li>
+            <li>roll</li>
+        </ol>
+
         <h1 style="font-size: 80;">RICK IS LOVE, RICK IS LIFE</h1>
 
         <p>
             ALL HAIL RICK</br>
-            <img src="https://i.imgflip.com/2/4lst2s.jpg"width="104" height="142"><br>
+            <img src="https://i.imgflip.com/2/4lst2s.jpg" alt="Rick's foot"width="104" height="142"><br>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">This is a rick related link</a>
         </p>
     </body>
