--- a/1-1.html/index.html
+++ b/1-1.html/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>RIIIIIIIIIIIIIIIIIICCCCCCCCKKKKKK</title>
+        <title>1-1</title>
     </head>
 
     <body>
