--- a/index.html
+++ b/index.html
@@ -1,25 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-
-    <head>
-        <meta charset="utf-8">
-        <title>RIIIIIIIIIIIIIIIIIICCCCCCCCKKKKKK</title>
-    </head>
-
-    <body>
-        <h1 style="font-size: 80;">RICK IS LOVE, RICK IS LIFE</h1>
-
-        <ol>
-            <li>rick</li>
-            <li>roll</li>
-            <li>rick</li>
-            <li>roll</li>
-        </ol>
-        
-        <p>
-            ALL HAIL RICK</br>
-            <img src="https://i.imgflip.com/2/4lst2s.jpg" alt="Rick's foot"width="104" height="142"><br>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">This is a rick related link</a>
-        </p>
-    </body>
-</html>
+<p>
+    Hello World!
+</p>
