--- a/1-1/index.html
+++ b/1-1/index.html
@@ -1,25 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
     <head>
         <meta charset="utf-8">
-        <title>1-1</title>
+        <title>Resume</title>
     </head>
+    <body style="background-color: antiquewhite;">
 
     <body>
-        <h1 style="font-size: 80;">RICK IS LOVE, RICK IS LIFE</h1>
+        <h1>Braydyn Tremble</h1>
+        <h3>
+            1854 Bessinger Road, Turner, MI 48765 <br>
+            989-313-7968 <br>
+            braydyntremble@gmail.com <br>
+        </h3>
 
-        <ol>
-            <li>rick</li>
-            <li>roll</li>
-            <li>rick</li>
-            <li>roll</li>
-        </ol>
-        
+        <h3><u>EDUCATION</u></h3>
+        <hr>
         <p>
-            ALL HAIL RICK</br>
-            <img src="https://i.imgflip.com/2/4lst2s.jpg" alt="Rick's foot"width="104" height="142"><br>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">This is a rick related link</a>
+            STANDISH STERLING HIGH SCHOOL - 989-846-3660_____Graduation Date: June 2024 <br>
+            2401 Grove Street Road, Standish, MI 48659 <br>
+            <br>
+            BAY-ARENAC ISD CAREER CENTER - 989-686-4770_____Compleation Date: June 2024 <br>
+            Program Area: Computer Programming <br>
+            4155 Monitor Road, Bay City, MI 48706
         </p>
-    </body>
+        <hr>
+        <br>
+
+        <h3><u>WORK HISTORY</u></h3>
+        <hr>
+        <p>
+            McDonald's - 989-846-9561_____May 2020-January 2023 <br>
+            515 South US Hwy 23, Standish, MI 48658 <br>
+            Supervisor: Amanda Delgado
+            Duties: Crew Member
+        </p>
+        <hr>
+        <br>
+
+        <h3><u>SPECIAL SKILLS</u></h3>
+        <hr>
+        <ul>
+            <li>Java</li>
+            <li>Computer Terminology</li>
+            <li>PC Building</li>
+            <li>PC Troubleshooting</li>
+            <li>PC Repair</li>
+            <li>Python</li>
+            <li>HTML</li>
+            <li>CSS</li>
+        </ul>
+        <hr>
+        <br>
+
+        <h3><u>MEMBERSHIPS & AWARDS</u></h3>
+        <hr>
+        <ul>
+            <li>Member Of BPA</li>
+            <li>Member Of First Robotics</li>
+        </ul>
+        <hr>
+        <br>
+
+        <h3><u>MEMBERSHIPS & AWARDS</u></h3>
+        <hr>
+        <ul>
+            <li>Fourth Grade Mini Sessions</li>
+            <li>Eighth Grade Mini Sessions</li>
+            <li>Tenth Grade Mini Sessions</li>
+            <li>State Park Cleanup</li>
+            <li>Great Lakes Sturgen Guard</li>
+        </ul>
+        <hr>
+    </body> 
 </html>
