--- a/1-1/index.html
+++ b/1-1/index.html
@@ -68,7 +68,7 @@
         <br>
         <br>
 
-        <h3><u>MEMBERSHIPS & AWARDS</u></h3>
+        <h3><u>COMMUNITY SERVICE</u></h3>
         <hr>
         <ul>
             <li>Fourth Grade Mini Sessions</li>
